src/tests/snapshots/protocols__core__serialize__tests__add_d1.snap
---
source: src/core/serialize.rs
expression: content
---
struct Adder {
  in a: u32,
  in b: u32,
  out s: u32,
}

fn add<DUT: Adder>(in a: u32, in b: u32, out s: u32) {
  DUT.a := a;
  DUT.b := b;
  step();
  fork();
  DUT.a := X;
  DUT.b := X;
  assert_eq(s, DUT.s);
}
