src/tests/snapshots/protocols__core__serialize__tests__aes128.snap
---
source: src/core/serialize.rs
expression: content
---
struct TinyAES128 {
  in key: u128,
  in state: u128,
  out out: u128,
}

fn aes128<dut: TinyAES128>(in key: u128, in state: u128, out out: u128) {
  dut.state := state;
  dut.key := key;
  step();
  fork();
  dut.state := X;
  dut.key := X;
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  step();
  assert_eq(dut.out, out);
}
