src/tests/snapshots/protocols__core__serialize__tests__aes128_round.snap
---
source: src/core/serialize.rs
expression: content
---
struct RoundIO {
  in state: u128,
  in key: u128,
  out state_next: u128,
}

fn aes128<dut: RoundIO>(in key: u128, in state: u128, out output: u128) {
  dut.state := state;
  step();
  fork();
  dut.state := X;
  dut.key := key;
  step();
  dut.key := X;
  assert_eq(dut.state_next, output);
}
