src/tests/snapshots/protocols__core__serialize__tests__if_without_else.snap
---
source: src/core/serialize.rs
expression: content
---
struct DualIdentity {
  in a: u64,
  in b: u64,
}

fn if_without_else<dut: DualIdentity>(in a: u64, in b: u64) {
  if dut.b == b {
    dut.a := a;
  } else {
  }
}
